--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# csv files
+*.csv
+
+# additional files
+.cache.sqlite
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
