--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,5 +1,8 @@
+gunicorn==23.0.0
 Flask==3.1.1
 joblib==1.5.1
 openmeteo_requests==1.5.0
 pandas==2.3.0
+psutil==7.0.0
 requests==2.32.4
+scikit-learn==1.7.0
