Refactor: organise project into a package and notebooks folder.
- Moved Python modules into a new build_dataset/ package
- Moved Jupyter notebooks to notebooks/ directory
- Renamed data_handling.py → combine_data.py
- Removed unused files: render.yaml, data_exploration.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # data files
 *.csv
 *.pkl
-!large_hyperparam_search.csv
+!notebooks/large_hyperparam_search.csv
 
 # additional files
 .cache.sqlite
